# data-assistant

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
agent/: tools.py
bq/: bq_conn.py
catalog/: main.py
tester/: validator.py
